Prevent overflow scrolling on the whole app

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,7 @@ ul {
   padding-top: 0 !important;
   padding-bottom: 0 !important;
 }
+
+body {
+  overflow: hidden;
+}
